<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="us.reachmobi.sportapp.ui.fragment.league.info.LeagueInfoViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#efefef"
        android:orientation="vertical">

        <ProgressBar
            android:visibility="@{vm.loading ? View.VISIBLE : View.GONE}"
            android:layout_marginTop="-7dp"
            style="?android:attr/progressBarStyleHorizontal"
            android:indeterminate="true"
            android:id="@+id/progressbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="@{vm.loading ? View.GONE : View.VISIBLE}">

            <ImageView
                android:id="@+id/iv_trophy"
                android:layout_width="match_parent"
                android:layout_height="96dp"
                android:layout_margin="8dp"
                android:scaleType="fitCenter"
                android:visibility="visible"
                setUrlImage="@{vm.leagueDetail.strTrophy}"/>

            <TextView
                android:id="@+id/tv_formed_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/formed_year"
                android:textAlignment="center"
                android:visibility="visible"
                android:text="@{@string/year_founded(vm.leagueDetail.intFormedYear)}"/>

            <TextView
                android:id="@+id/tv_league_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                tools:text="@string/description"
                android:text="@{vm.leagueDetail.strDescriptionEN}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tv_website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                tools:text="@string/website"
                android:text="@{vm.leagueDetail.strWebsite}"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tv_facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                tools:text="@string/facebook"
                android:text="@{vm.leagueDetail.strFacebook}"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tv_twitter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                tools:text="@string/twitter"
                android:text="@{vm.leagueDetail.strTwitter}"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tv_youtube"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                tools:text="@string/youtube"
                android:text="@{vm.leagueDetail.strYoutube}"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/iv_banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@mipmap/ic_launcher"
                android:visibility="visible"
                setUrlImage="@{vm.leagueDetail.strBanner}"/>
        </LinearLayout>
    </LinearLayout>
</layout>